@@ -4,11 +4,11 @@
 
 <head>
 <title>GNOME 2.20 Desktop &amp; Developer Platform</title>
-<meta HTTP-EQUIV="Refresh" CONTENT="URL=notes/en/">
+<meta http-equiv="REFRESH" content="0;URL=notes/en/">
 </head>
 
 <body>
-
+<p>See the <a href="notes/en/">release notes</a>.</p>
 </body>
 
 </html>
