@@ -68,35 +68,35 @@
 			so that we have translations of the languages if needed.
 			-->
 			<para>The Release Notes are available in several languages:
-				<ulink url="../bg/">Bulgarian</a>, 
-				<ulink url="../ca/">Catalan</a>,
-        <ulink url="../zh_CN/">Chinese (Simplified)</a>,
-        <ulink url="../zh_TW/">Chinese (Traditional)</a>,
-        <ulink url="../da/">Danish</a>,
-				<ulink url="../nl/">Dutch</a>,
-        <ulink url="../et/">Estonian</a>,
-				<ulink url="../en/">English</a>, 
-				<ulink url="../fr/">French</a>, 
-				<ulink url="../de/">German</a>, 
-				<ulink url="../el/">Greek</a>, 
-				<ulink url="../id/">Indonesian</a>, 
-        <ulink url="../it/">Italian</a>,
-				<ulink url="../ja/">Japanese</a>, 
-        <ulink url="../ko/">Korean</a>,
-				<ulink url="../lt/">Lithuanian</a>, 
-        <ulink url="../mk/">Macedonian</a>,
-				<ulink url="../pa/">Panjabi</a>, 
-				<ulink url="../pl/">Polish</a>, 
-				<ulink url="../pt_BR/">Portuguese (Brazilian)</a>,  
-				<ulink url="../ru/">Russian</a>, 
-				<ulink url="../sr/">Serbian</a>, 
-				<ulink url="../es/">Spanish</a>, 
-				<ulink url="../sv/">Swedish</a>,
-				<ulink url="../th/">Thai</a>, 
-        <ulink url="../tr/">Turkish</a>,
-				<ulink url="../uk/">Ukranian</a>,
-				<ulink url="../vi/">Vietnamese</a>,
-				<ulink url="../cy/">Welsh</a>.
+				<ulink url="../bg/">Bulgarian</ulink>, 
+				<ulink url="../ca/">Catalan</ulink>,
+        <ulink url="../zh_CN/">Chinese (Simplified)</ulink>,
+        <ulink url="../zh_TW/">Chinese (Traditional)</ulink>,
+        <ulink url="../da/">Danish</ulink>,
+				<ulink url="../nl/">Dutch</ulink>,
+        <ulink url="../et/">Estonian</ulink>,
+				<ulink url="../en/">English</ulink>, 
+				<ulink url="../fr/">French</ulink>, 
+				<ulink url="../de/">German</ulink>, 
+				<ulink url="../el/">Greek</ulink>, 
+				<ulink url="../id/">Indonesian</ulink>, 
+        <ulink url="../it/">Italian</ulink>,
+				<ulink url="../ja/">Japanese</ulink>, 
+        <ulink url="../ko/">Korean</ulink>,
+				<ulink url="../lt/">Lithuanian</ulink>, 
+        <ulink url="../mk/">Macedonian</ulink>,
+				<ulink url="../pa/">Panjabi</ulink>, 
+				<ulink url="../pl/">Polish</ulink>, 
+				<ulink url="../pt_BR/">Portuguese (Brazilian)</ulink>,  
+				<ulink url="../ru/">Russian</ulink>, 
+				<ulink url="../sr/">Serbian</ulink>, 
+				<ulink url="../es/">Spanish</ulink>, 
+				<ulink url="../sv/">Swedish</ulink>,
+				<ulink url="../th/">Thai</ulink>, 
+        <ulink url="../tr/">Turkish</ulink>,
+				<ulink url="../uk/">Ukranian</ulink>,
+				<ulink url="../vi/">Vietnamese</ulink>,
+				<ulink url="../cy/">Welsh</ulink>.
 			</para>
 
 		</abstract>
