@@ -2,6 +2,7 @@
 <!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY urlfiguresbase "figures/">
+<!ENTITY gnomeversion "2.20">
 ]>
 
 <sect1 id="rnusers">
@@ -80,7 +81,7 @@
 
 		<para>
 			The GNOME file manager, Nautilus, now offers a powerful search interface
-			available by pressing <shortcut>Ctrl-F</shortcut> on the desktop or in a file
+			available by pressing Ctrl-F on the desktop or in a file
 			manager window.
 		</para>
 		
@@ -260,7 +261,7 @@
 		<para>
 			Deskbar has both an in-panel mode, and a collapsed mode for use on
 			vertical panels or panels with little free space. To search you simply
-			press <shortcut>Alt-F3</shortcut> and enter some terms. You can also
+			press Alt-F3 and enter some terms. You can also
 			browse or search your command history.
 		</para>
 	</sect2>
