@@ -1,5 +1,9 @@
 2007-08-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/release-notes.xml: Correct the ulink markup.
+
+2007-08-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/release-notes.xml: Combine the What Is GNOME 
 	text from ../index.wml and just link to the About GNOME
 	page on the website. Remove the Getting Involved section 
